css/styles.css
@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato/Lato-Black.ttf') format('truetype');
  font-weight: 900;
  font-style: normal;
}

@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato/Lato-BlackItalic.ttf') format('truetype');
  font-weight: 900;
  font-style: italic;
}

@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato/Lato-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato/Lato-BoldItalic.ttf') format('truetype');
  font-weight: bold;
  font-style: italic;
}

@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato/Lato-Italic.ttf') format('truetype');
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato/Lato-Light.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato/Lato-LightItalic.ttf') format('truetype');
  font-weight: 300;
  font-style: italic;
}

@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato/Lato-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato/Lato-Thin.ttf') format('truetype');
  font-weight: 100;
  font-style: normal;
}

@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato/Lato-ThinItalic.ttf') format('truetype');
  font-weight: 100;
  font-style: italic;
}

@font-face {
  font-family: 'Montserrat';
  src: url('fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Montserrat';
  src: url('fonts/Montserrat/Montserrat-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Montserrat';
  src: url('fonts/Montserrat/Montserrat-Italic.ttf') format('truetype');
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: 'Roboto';
  src: url('fonts/Roboto/Roboto-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Roboto';
  src: url('fonts/Roboto/Roboto-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Roboto';
  src: url('fonts/Roboto/Roboto-Italic.ttf') format('truetype');
  font-weight: normal;
  font-style: italic;
}

:root {
  --red: rgb(235,66,54);
  --blue: rgb(65,134,241);
  --logo-font: 'Lato', sans-serif;
}

.custom-container {
  z-index: 2;
  max-width: 1400px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  padding: 0 4% 30px;
  overflow: visible;
}

body {
  font-family: 'Lato', sans-serif; 
}

h1, h2, h3 {
  font-family: 'Lato', sans-serif;
  font-weight:900;
}

.logo-font {
  font-family: var(--logo-font);
  font-weight:300;
}

.headline {
  font-size: 38pt;
  margin-bottom: 0;
  font-family: 'Lato', sans-serif;
  font-weight:900;
  line-height: 1.25em;
}

.sub-headline {
  font-size: 20pt;
  margin-top: 0;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
}

section {
  padding: 25px 0 25px 0;
}

.blue-section {
  background-color: rgba(65,134,241,0.15);
  background-position: 0 0,0 0;
  background-size: auto,auto;
  padding-top: 60px;
}

.blue-text {
  color: var(--blue);
}

.red-text {
  color: var(--red);
}

.lg-p-1 {
  font-size:17pt;
}

.lg-p-2 {
  font-size:16pt;
}

.lg-p-3 {
  font-size:14pt;
}

.bold {
  font-weight: bold;
}

svg {
  display: block;
  max-width: 100%; 
  height: auto; 
}

.svg-container {
  width: 100%;
  height: 100vh; 
  overflow: hidden; 
}

.svg-container svg {
  display: block;
  width: 100%; 
  height: 100%; 
  object-fit: contain;
}

.btn-wide {
  min-width: 50%;
}

.fade-in-left {
  animation: fadeInLeft 0.5s ease-in-out;
}

.fade-in-up {
  animation: fadeInUp 0.5s ease-in-out;
}

.fade-in-right {
  animation: fadeInRight 0.5s ease-in-out;
}

.fade-in-down {
  animation: fadeInDown 0.5s ease-in-out;
}

@keyframes fadeInLeft {
  from {
    opacity: 0;
    transform: translateX(-40px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translateY(40px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes fadeInRight {
  from {
    opacity: 0;
    transform: translateX(40px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes fadeInDown {
  from {
    opacity: 0;
    transform: translateY(-40px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@media only screen and (min-width: 1199px){
  .indented-left {
    padding-left: 18px;
  }
  
  .indented-right {
    padding-right: 18px;
  }
}

@media (prefers-color-scheme: dark) {
  html {
    filter: invert(95%) hue-rotate(180deg);
  }

  img {
    filter: invert(100%) hue-rotate(180deg);
  }

}

